--- a/dotnet-core-api-react/appsettings.json
+++ b/dotnet-core-api-react/appsettings.json
@@ -11,5 +11,9 @@
       "Default": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GitHub": {
+    "ClientId": "215d248241c2de8ff4ee",
+    "ClientSecret": "6512653f23dd7a21265e9c6e354ab01ca45f796f"
+  }
 }
